--- a/src/Components/HomePage/Partners/style.scss
+++ b/src/Components/HomePage/Partners/style.scss
@@ -2,12 +2,18 @@
   background: var(--Lightest-Grey, #fafafa);
   display: flex;
   justify-content: center;
-  margin-top: 140px;
+  margin-top: 136px;
+  @media (max-width: 1439px) {
+    margin-top: 34px;
+  }
   @media (max-width: 1024px) {
     margin-top: 40px;
   }
-  @media (max-width: 480px) {
-    margin-top: 24px;
+  @media (max-width: 767px) {
+    margin-top: 31px;
+  }
+  @media (max-width: 479px) {
+    margin-top: 48px;
   }
   .partners-container {
     display: flex;
@@ -19,36 +25,28 @@
     @media (max-width: 1024px) {
       padding: 40px;
     }
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
       padding: 24px 16px;
     }
     .title {
-      color: var(--Neutral-700, #404040);
-      text-align: center;
-      font-family: Inter;
-      font-size: 48px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 52px; /* 108.333% */
-      letter-spacing: -2.4px;
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         font-size: 40px;
       }
-      @media (max-width: 480px) {
+      @media (max-width: 479px) {
         font-size: 32px;
-      }
-      span {
-        color: #72c420;
       }
     }
     .description {
-      color: rgba(0, 0, 0, 0.7);
       text-align: center;
-      font-family: Inter;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 24px; /* 150% */
+      @media (max-width: 767px) {
+        color: rgba(0, 0, 0, 0.7);
+        text-align: center;
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; /* 150% */
+      }
     }
     .partners-list-container {
       display: flex;
@@ -56,9 +54,12 @@
       column-gap: 20px;
       row-gap: 24px;
       justify-content: flex-start;
+      @media (max-width: 767px) {
+        row-gap: 12px;
+      }
       .partner {
         display: flex;
-        height: 80px;
+        height: 78px;
         justify-content: center;
         align-items: center;
         border-radius: 10px;
@@ -72,7 +73,7 @@
         @media (max-width: 1024px) {
           width: calc((100% - 24px) / 2);
         }
-        @media (max-width: 768px) {
+        @media (max-width: 767px) {
           width: 100%;
         }
         img {
